# evacode_backend

./: .env.template  .gitignore  .gitmodules  README.md  WINUS_RESTapi_spec_ru_v2.0.1.xlsx  WINUS_RESTapi_인터페이스 명세_v2.0.1.xlsx  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
dockerfiles/: Dockerfile  Dockerfile.dev
dockerfiles/nginx/: Dockerfile.dev  nginx.conf  nginx.dev.conf
evacode_backend/: .env.template  db.sqlite3  file.json
evacode_backend/core/migrations/: 0002_alter_post_image_comment.py
evacode_backend/evacode_backend/: asgi.py  settings.py  urls.py
evacode_backend/market/: filters.py  models.py  pagination.py  serializers.py  urls.py  utils.py  views.py
evacode_backend/market/migrations/: 0001_initial.py  0003_alter_goodsmodel_description.py  0004_rename_retail_price_goodsmodel_price.py  0005_remove_goodsmodel_price_goodsmodel_retail_price_and_more.py
src/: dumpdata.json  orders_list.json
src/core/: admin.py  models.py  serializers.py  test.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_alter_aboutus_options_alter_banner_options_and_more.py  0002_banner.py  0003_aboutus_contacts_delivery.py  0003_alter_delivery_delivery_type.py  0004_review.py  0004_slide.py  0005_alter_review_options.py  0006_contacts_tiktok_alter_review_text.py  0007_sectionwithvideo.py  0008_remove_aboutus_image.py  (+1 more)
src/evacode_backend/: .env.template  manage.py  settings.py  urls.py
src/finance/: admin.py  models.py  tests.py  urls.py  views.py
src/market/: filters.py  models.py  pagination.py  serializers.py  utils.py  views.py
(+29 files in other folders)
